--- a/app/credits.html
+++ b/app/credits.html
@@ -309,7 +309,17 @@
                 {
                     name: "Oasis",
                     language: "Français",
-                    link: "https://www.youtube.com/channel/UCL85-pp5V0UC_WjjLKb39pQ",
+                    link: "https://youtube.com/channel/UCL85-pp5V0UC_WjjLKb39pQ",
+                },
+                {
+                    name: "Zubbzirro",
+                    language: "Nederlandse",
+                    link: "https://twitch.tv/zubbzirro",
+                },
+                {
+                    name: "Nemhenil",
+                    language: "Nederlandse",
+                    link: "https://caffeine.tv/Nemhenil",
                 }
             ];
 
