Add Spanish translation.

--- a/app/credits.html
+++ b/app/credits.html
@@ -321,6 +321,12 @@
                         name: "Nemhenil",
                         link: "https://caffeine.tv/Nemhenil",
                     }
+                ],
+                "Español": [
+                    {
+                        name: "Eslerand",
+                        link: "https://twitch.tv/Eslerand",
+                    }
                 ]
             };
 
