--- a/app/index.html
+++ b/app/index.html
@@ -259,6 +259,7 @@
 
         <script src="lang/en.js"></script>
         <script src="lang/fr.js"></script>
+        <script src="lang/es.js"></script>
         <script src="lang/nl.js"></script>
 
         <script src="js/util.js"></script>
