Fix oddity with the navigation icons.

--- a/app/index.html
+++ b/app/index.html
@@ -84,13 +84,13 @@
             </div>
             <!-- <span class="currentpage" style="opacity: 0;"></span> -->
             <a class="close" title="Close">
-                <ion-icon name="close"></ion-icon>
+                <ion-icon name="close" style="--ionicon-stroke-width: 46px !important;""></ion-icon>
             </a>
-            <a class="minmax" title="Maximize">
-                <ion-icon name="browsers-outline"></ion-icon>
+            <a class=" minmax" title="Maximize">
+                    <ion-icon name="browsers-outline"></ion-icon>
             </a>
             <a class="minimize" title="Minimize">
-                <ion-icon name="remove" style="--ionicon-stroke-width: 48px !important;"></ion-icon>
+                <ion-icon name="remove" style="--ionicon-stroke-width: 62px !important;"></ion-icon>
             </a>
         </div>
         <div id="content" class="hide" style="opacity: 0;">
