Fix navigation icons, again.

--- a/app/index.html
+++ b/app/index.html
@@ -80,14 +80,15 @@
         <canvas id="doot-rain" style="opacity: 0;"></canvas>
         <div class="title-bar">
             <div class="title-bar-title">
-                <img class="version-hover" src="media/app_icon.png" onclick="UI.doot();" />Caffeinated
+                <img class="version-hover" src="media/app_icon.png" onclick="UI.doot();" />
+                Caffeinated
             </div>
             <!-- <span class="currentpage" style="opacity: 0;"></span> -->
             <a class="close" title="Close">
-                <ion-icon name="close" style="--ionicon-stroke-width: 46px !important;""></ion-icon>
+                <ion-icon name="close-outline" style="--ionicon-stroke-width: 46px !important;"></ion-icon>
             </a>
             <a class=" minmax" title="Maximize">
-                    <ion-icon name="browsers-outline"></ion-icon>
+                <ion-icon name="browsers-outline"></ion-icon>
             </a>
             <a class="minimize" title="Minimize">
                 <ion-icon name="remove" style="--ionicon-stroke-width: 62px !important;"></ion-icon>
