Add a changelog viewer.

--- a/app/index.html
+++ b/app/index.html
@@ -97,6 +97,11 @@
         <div id="content" class="hide" style="opacity: 0;">
             <div id="banners">
             </div>
+            <div id="changelog" class="hide">
+                <a id="changelog-close">
+                    <ion-icon name="close-circle-outline"></ion-icon>
+                </a>
+            </div>
             <div class="main-content">
                 <div class="menu">
                     <nav>
