Make twitch auth force reverification. Fix chatbot linking.

--- a/app/index.html
+++ b/app/index.html
@@ -172,7 +172,7 @@
                         <div class="bounce3"></div>
                     </div>
                     <br />
-                    <a onclick="UI.loginScreen('NONE');">
+                    <a onclick="UI.backCallback();">
                         <sup>
                             Want to go back?
                         </sup>
@@ -197,7 +197,7 @@
                     <br />
                     <input type="submit" value="Signin" class="button login-element" onclick="UI.loginCaffeine()" />
                     <br />
-                    <a onclick="UI.loginScreen('NONE');">
+                    <a onclick="UI.backCallback();">
                         <sup>
                             Want to go back?
                         </sup>
@@ -220,7 +220,7 @@
                     <br />
                     <input type="submit" value="Signin" class="button login-element" onclick="UI.loginCaffeine()" />
                     <br />
-                    <a onclick="UI.loginScreen('NONE');">
+                    <a onclick="UI.loginScreen('CAFFEINE');">
                         <sup>
                             Want to go back?
                         </sup>
