--- a/dock/dock.html
+++ b/dock/dock.html
@@ -21,9 +21,7 @@
             </div>
         </div>
 
-        <div id="content" class="hide" style="opacity: 0;">
-
-        </div>
+        <div id="content" class="hide" style="opacity: 0;"></div>
     </body>
 
     <footer>
