Finish off the chat and viewer docks

--- a/app/modules/modules/chatdisplay.html
+++ b/app/modules/modules/chatdisplay.html
@@ -279,15 +279,15 @@
                 position: absolute;
                 padding: 0;
                 height: auto;
-                left: 25px;
+                left: 1.5625em;
                 bottom: 100%;
                 z-index: 1;
                 width: fit-content;
-                height: 30px;
+                height: 1.875em;
             }
 
             .tooltipbtn {
-                font-size: 20px;
+                font-size: 1.375em;
                 margin-left: 10px;
                 margin-top: 3px;
                 display: inline-block;
@@ -313,6 +313,10 @@
                 color: #D0D0D0;
             }
 
+            .hideviewers .vcviewerstatus {
+                display: none;
+            }
+
             .vcchatmessage {
                 position: relative;
                 display: flex;
@@ -329,23 +333,23 @@
             .vcprofile {
                 border-radius: 50%;
                 object-fit: cover;
-                height: 22px;
-                width: 22px;
+                height: 1.375em;
+                width: 1.375em;
                 margin: 1px 3px;
                 vertical-align: bottom;
             }
 
             .vcimage {
                 object-fit: cover;
-                height: 22px;
+                height: 1.375em;
                 width: auto;
                 vertical-align: bottom;
             }
 
             .vcbadge {
-                padding-left: 5px;
-                transform: translateY(3px);
-                height: 20px;
+                padding-left: 0.3125em;
+                transform: translateY(0.1875em);
+                height: 1.25em;
                 width: auto;
             }
 
@@ -420,6 +424,7 @@
             const messageInput = document.querySelector("#vcmessage");
 
             const connPresent = typeof conn !== "undefined";
+            const requirePresent = typeof require !== "undefined";
 
             let currentWindow;
             let shell;
@@ -434,7 +439,7 @@
                 sendChat();
             });
 
-            if (typeof require !== "undefined") {
+            if (requirePresent) {
                 // We're not in the simulation
                 currentWindow = require("electron").remote.getCurrentWindow();
                 shell = require("electron").shell;
@@ -452,14 +457,32 @@
                 document.body.classList.add("is-dock");
 
                 conn.on("eval", eval);
+                conn.on("config", updateConfig);
+
                 conn.emit("ready_init");
+            }
+
+            function updateConfig(config) {
+                document.body.style.fontSize = `${config.font_size}px`;
+
+                if (config.show_viewers) {
+                    document.body.classList.remove("hideviewers");
+                } else {
+                    document.body.classList.add("hideviewers");
+                }
             }
 
             function sendChat() {
                 if (connPresent) {
                     conn.emit("chat", messageInput.value);
-                } else {
+                } else if (requirePresent) {
                     currentWindow.emit("send_message", messageInput.value);
+                } else {
+                    document.dispatchEvent(new CustomEvent("send_message", {
+                        detail: {
+                            message: messageInput.value
+                        }
+                    }));
                 }
 
                 messageInput.value = "";
@@ -632,7 +655,7 @@
                 tryJump();
             }
 
-            function addStatus(profile, lang, id) {
+            function addStatus(profile, lang, id, type) {
                 // Prevent duplicates
                 if (!id || !document.querySelector("[vc_message_id='" + event.id + "']")) {
                     const div = document.createElement("div");
@@ -652,6 +675,10 @@
                     div.classList.add("vcstatus");
                     div.appendChild(pfp);
                     div.appendChild(text);
+
+                    if (type === "viewer") {
+                        div.classList.add("vcviewerstatus");
+                    }
 
                     msg.appendChild(div);
 
