--- a/changelog.html
+++ b/changelog.html
@@ -177,6 +177,24 @@
         <div class="changelog content">
             <div class="current-version">
                 <h2>
+                    Casterlabs Caffeinated 1.1 Stable 31
+                </h2>
+                <h6>
+                    April 28, 2021
+                </h6>
+                <div class="separator"></div>
+                <h4>
+                    Everyone:
+                </h4>
+                <ul>
+                    <li>
+                        Fixed Ko-fi integration not working.
+                    </li>
+                </ul>
+            </div>
+
+            <div>
+                <h2>
                     Casterlabs Caffeinated 1.1 Stable 30
                 </h2>
                 <h6>
