Add some analytics to Caffeinated finally.

--- a/app/index.html
+++ b/app/index.html
@@ -282,6 +282,7 @@
     </body>
 
     <footer>
+        <script src="js/analytics.js"></script>
         <script src="js/lang.js"></script>
 
         <script src="lang/en.js"></script>
@@ -302,7 +303,6 @@
         <script src="js/repomanager.js"></script>
         <script src="js/caffeinated.js"></script>
         <script>
-
             window.addEventListener("beforeunload", () => {
                 const current = electron.getCurrentWindow();
 
