--- a/changelog.html
+++ b/changelog.html
@@ -106,7 +106,7 @@
                 background-color: #141414;
             }
 
-            .current-version {
+            .changelog>div:first-child {
                 --color: white !important;
                 filter: none !important;
             }
@@ -175,7 +175,31 @@
         </div>
 
         <div class="changelog content">
-            <div class="current-version">
+            <div>
+                <h2>
+                    Casterlabs Caffeinated 1.1 Stable 32
+                </h2>
+                <h6>
+                    April 28, 2021
+                </h6>
+                <div class="separator"></div>
+                <h4>
+                    Everyone:
+                </h4>
+                <ul>
+                    <li>
+                        Fixed the uptime widget.
+                    </li>
+                    <li>
+                        Added a toggle to disable Discord integration.
+                    </li>
+                    <li>
+                        Added app analytic reporting, for internal use :^)
+                    </li>
+                </ul>
+            </div>
+
+            <div>
                 <h2>
                     Casterlabs Caffeinated 1.1 Stable 31
                 </h2>
