--- a/changelog.html
+++ b/changelog.html
@@ -177,6 +177,27 @@
         <div class="changelog content">
             <div>
                 <h2>
+                    Casterlabs Caffeinated 1.1 Stable 33
+                </h2>
+                <h6>
+                    May 5, 2021
+                </h6>
+                <div class="separator"></div>
+                <h4>
+                    Everyone:
+                </h4>
+                <ul>
+                    <li>
+                        We now show a random streamer on the login page.
+                    </li>
+                    <li>
+                        The changelog no longer auto appears, there is now a banner to let you know that we've updated.
+                    </li>
+                </ul>
+            </div>
+
+            <div>
+                <h2>
                     Casterlabs Caffeinated 1.1 Stable 32
                 </h2>
                 <h6>
