--- a/changelog.html
+++ b/changelog.html
@@ -177,6 +177,32 @@
         <div class="changelog content">
             <div>
                 <h2>
+                    Casterlabs Caffeinated 1.1 Stable 34
+                </h2>
+                <h6>
+                    May 5, 2021
+                </h6>
+                <div class="separator"></div>
+                <h4>
+                    <img class="platform-icon" src="https://assets.casterlabs.co/brime/icon.png" /> Brime:
+                </h4>
+                <ul>
+                    <li>
+                        Enabled the subscription related widgets.
+                    </li>
+                </ul>
+                <h4>
+                    <img class="platform-icon" src="https://assets.casterlabs.co/caffeine/icon.png" /> Caffeine:
+                </h4>
+                <ul>
+                    <li>
+                        Updated the Caffeine gold/credits conversion rate to better reflect the split paid out to the broadcaster.
+                    </li>
+                </ul>
+            </div>
+
+            <div>
+                <h2>
                     Casterlabs Caffeinated 1.1 Stable 33
                 </h2>
                 <h6>
