Add height, font, and font size properties to the goal widgets.

--- a/widgets/goal.html
+++ b/widgets/goal.html
@@ -5,7 +5,6 @@
         <title>Caffeinated Goal</title>
         <style>
             body {
-                font-family: "Trebuchet MS", Helvetica, sans-serif;
                 position: absolute;
                 bottom: 0;
                 left: 0;
@@ -17,20 +16,19 @@
                 overflow: hidden;
                 text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
                 margin: 0;
+                font-size: 28px;
             }
 
             .hide {
                 display: none;
             }
 
-            /* All html objects will be wrapped in the #wrap div */
-            .goal_cont {
+            #wrapper {
                 color: white;
                 box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
             }
 
             #title {
-                font-size: 28px;
                 text-align: center;
                 text-shadow: 0px 0px 10px #000;
                 margin: 0;
@@ -45,14 +43,14 @@
                 display: flex;
                 position: relative;
                 overflow: hidden;
+                height: 28px;
+                align-items: center;
             }
 
             #goal_current,
             #goal_total {
                 margin: 0;
-                font-family: Roboto, sans-serif;
                 font-weight: bold;
-                font-size: 28px;
                 text-shadow: 0px 0px 10px #000;
                 width: 15%;
                 z-index: 1;
@@ -64,20 +62,21 @@
 
             #total_bar {
                 position: absolute;
-                width: calc(100% - 8px);
+                max-width: calc(100% - 8px);
                 height: calc(100% - 8px);
-                max-width: 100%;
                 background: #31f8ff;
                 top: 4px;
                 left: 4px;
                 overflow: hidden;
-                width: 0;
             }
         </style>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.8/socket.io.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js"></script>
+        <script src="overlayutil.js"></script>
     </head>
 
     <body>
-        <div class="goal_cont">
+        <div id="wrapper">
             <div style="position: relative">
                 <div id="goal_bar">
                     <p id="goal_current"></p>
@@ -87,10 +86,13 @@
                 </div>
             </div>
         </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.8/socket.io.min.js"></script>
-        <script src="overlayutil.js"></script>
         <script>
+            const titleElem = document.querySelector("#title");
+            const goalElem = document.querySelector("#goal_bar");
+            const currentElem = document.querySelector("#goal_current");
+            const totalElem = document.querySelector("#goal_total");
+            const progressElem = document.querySelector("#total_bar");
+
             const overlay = new OverlayUtil(vars.namespace);
             let config = {};
 
@@ -99,28 +101,33 @@
             overlay.on("config", (data) => {
                 config = data;
 
-                document.getElementById("title").innerHTML = config.title;
-                document.getElementById("title").style.color = config.text_color;
+                titleElem.style.color = config.text_color;
+                currentElem.style.color = config.text_color;
+                totalElem.style.color = config.text_color;
 
-                document.getElementById("goal_current").style.color = config.text_color;
+                progressElem.style.background = config.bar_color;
 
-                document.getElementById("goal_total").style.color = config.text_color;
+                titleElem.innerHTML = config.title;
 
-                document.getElementById("total_bar").style.background = config.bar_color;
+                goalElem.style.height = `${config.height - 32}px`;
+
+                document.body.style.fontSize = `${config.font_size}px`;
+
+                overlay.changeFont(config.font);
             });
 
             overlay.on("display", (display) => {
-                document.getElementById("goal_current").innerHTML = display;
+                currentElem.innerHTML = display;
             });
 
             overlay.on("goaldisplay", (display) => {
-                document.getElementById("goal_total").innerHTML = display;
+                totalElem.innerHTML = display;
             });
 
             overlay.on("amount", (amount) => {
-                let percentage = Math.round(amount / config.goal_amount * 100);
+                const percentage = Math.floor((amount / config.goal_amount) * 100);
 
-                $("#total_bar").css("width", percentage + "%").css("width", "-=8px");
+                progressElem.style.width = `calc(${percentage}% - 8px)`;
             });
         </script>
     </body>
