--- a/changelog.html
+++ b/changelog.html
@@ -177,6 +177,35 @@
         <div class="changelog content">
             <div>
                 <h2>
+                    Casterlabs Caffeinated 1.1 Stable 35
+                </h2>
+                <h6>
+                    May 15, 2021
+                </h6>
+                <div class="separator"></div>
+                <h4>
+                    <img class="platform-icon" src="https://assets.casterlabs.co/trovo/icon.png" /> Trovo:
+                </h4>
+                <ul>
+                    <li>
+                        Fixed the Elixir currency not displaying properly.
+                    </li>
+                </ul>
+                <h4>
+                    Everyone:
+                </h4>
+                <ul>
+                    <li>
+                        Added subscriber and follower counter widgets.
+                    </li>
+                    <li>
+                        Added height, font, and font size properties to the goal widgets.
+                    </li>
+                </ul>
+            </div>
+
+            <div>
+                <h2>
                     Casterlabs Caffeinated 1.1 Stable 34
                 </h2>
                 <h6>
