Make the qr code text unselectable

--- a/app/modules/modules/qr.html
+++ b/app/modules/modules/qr.html
@@ -11,6 +11,10 @@
                 color: black;
             }
 
+            * {
+                user-select: none;
+            }
+
             #click {
                 position: fixed;
                 left: 0;
